--- a/frontend-project/src/index.html
+++ b/frontend-project/src/index.html
@@ -7,8 +7,24 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Welcome to the Frontend Project</h1>
-    <p>This is a basic structure for a frontend project.</p>
+    <div class="hero-bg">
+        <div class="container hero">
+            <h1 class="animate-fadein">🚀 Welcome to the Frontend Project</h1>
+            <p class="subtitle animate-slideup">A modern, beautiful starting point for your next web adventure.</p>
+            <button class="button animate-pop" onclick="showMessage()">Get Started</button>
+        </div>
+    </div>
+    <section class="features container">
+        <h2>Features</h2>
+        <ul>
+            <li>✨ Clean, responsive layout</li>
+            <li>🎨 Stylish color palette</li>
+            <li>⚡ Smooth animations</li>
+        </ul>
+    </section>
+    <footer>
+        <p>Made with ❤️ by Your Name</p>
+    </footer>
     <script src="scripts/main.js"></script>
 </body>
 </html>
