--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Project</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="hero-bg">
@@ -25,6 +25,6 @@
     <footer>
         <p>Made with ❤️ by Your Name</p>
     </footer>
-    <script src="scripts/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
